fix (website): search popup being cropped due to overflow clip

--- a/website/src/style.css
+++ b/website/src/style.css
@@ -218,7 +218,6 @@ a:hover {
   margin: 0 auto;
   border: 1px solid var(--border);
   border-radius: 10px;
-  overflow: clip;
   box-shadow: var(--shadow-lg);
   background: var(--bg);
 }
